--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-stage-1": "^7.0.0",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
     "apollo-boost": "^0.1.23",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "prop-types": "latest",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
+    "react-lines-ellipsis": "^0.14.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "styled-components": "^3.3.2",
     "styled-reset": "^1.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --preset=stage-1",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
